--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.0",
     "dotenv": "^16.5.0",
